fix programming history spilling over in dev tools

--- a/src/components/programming-history/programming-history.css
+++ b/src/components/programming-history/programming-history.css
@@ -162,6 +162,7 @@
 
   .tab-content {
     margin-left: 0px;
+    position: relative;
   }
 
   .selected-tab-item {
